authentik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-ingress
  namespace: authentik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: auth.internal.luckywatcher.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80

  tls:
    - hosts:
        - auth.internal.luckywatcher.dev
      secretName: auth-internal-luckywatcher-dev-tls
